force-app/main/default/objects/Lead/fields/Are_You_Already_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Already_Licensed__c</fullName>
    <label>Are You Already Licensed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>