force-app/main/default/objects/Lead/fields/Current_Household_Members__c.field-meta.xml
<CustomField>
    <fullName>Current_Household_Members__c</fullName>
    <label>Current Household Members</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>