force-app/main/default/objects/Lead/fields/Do_you_have_experience_caring_for_childr__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_experience_caring_for_childr__c</fullName>
    <label>Do You Have Childcare Experience?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>