force-app/main/default/objects/Lead/fields/Do_You_Have_Pets__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Have_Pets__c</fullName>
    <label>Do You Have Pets?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>