force-app/main/default/objects/Lead/fields/Have_you_ever_been_convicted_of_a_felony__c.field-meta.xml
<CustomField>
    <fullName>Have_you_ever_been_convicted_of_a_felony__c</fullName>
    <label>Any Felony Or Abuse Convictions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>