force-app/main/default/objects/Lead/fields/How_Did_You_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_Us__c</fullName>
    <label>How Did You Hear About Us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google/Search Engine</fullName>
            </value>
            <value>
                <fullName>Social Media (Facebook, Instagram, etc.)</fullName>
            </value>
            <value>
                <fullName>State or County Website</fullName>
            </value>
            <value>
                <fullName>Referral from Current Foster Parent</fullName>
            </value>
            <value>
                <fullName>Referral from Social Worker/Caseworker</fullName>
            </value>
            <value>
                <fullName>Community Event or Info Session</fullName>
            </value>
            <value>
                <fullName>Church or Faith-Based Organization</fullName>
            </value>
            <value>
                <fullName>Flyer or Poster (Library, Community Center, etc.)</fullName>
            </value>
            <value>
                <fullName>Family or Friend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>