force-app/main/default/objects/Lead/fields/Inquiry_ID__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_ID__c</fullName>
    <displayFormat>INQ-{0000}</displayFormat>
    <label>Inquiry ID</label>
    <type>AutoNumber</type>
</CustomField>