force-app/main/default/objects/Lead/fields/Pre_Screening_Method__c.field-meta.xml
<CustomField>
    <fullName>Pre_Screening_Method__c</fullName>
    <label>Pre-Screening Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>