force-app/main/default/objects/Lead/fields/Pre_Screening_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_Screening_Notes__c</fullName>
    <label>Pre-Screening Notes</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>