force-app/main/default/objects/Lead/fields/Reason_for_Interest_in_Fostering__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Interest_in_Fostering__c</fullName>
    <label>Reason for Interest in Fostering</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>