force-app/main/default/objects/Lead/fields/Screened_By__c.field-meta.xml
<CustomField>
    <fullName>Screened_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screened By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>