force-app/main/default/objects/Lead/fields/Screening_Date__c.field-meta.xml
<CustomField>
    <fullName>Screening_Date__c</fullName>
    <label>Screening Date</label>
    <type>Date</type>
</CustomField>