force-app/main/default/objects/Lead/recordTypes/Foster_Care_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Foster_Care_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Foster Care%28Inquiry%29 Lead Process</businessProcess>
    <label>Foster Care Record Type</label>
</RecordType>