force-app/main/default/objects/Lead/listViews/Foster_Care_Leads.listView-meta.xml
<ListView>
    <fullName>Foster_Care_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Inquiry_ID__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Inquiry_ID__c</field>
        <operation>contains</operation>
        <value>INQ</value>
    </filters>
    <label>Foster Care Leads</label>
</ListView>